<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.example.ui.userInfoScreen.UserInfoActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userPhoto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/idID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userPhoto"
        android:text="@string/user_id"
        android:layout_marginBottom="5dp"
        android:textSize="15sp"

        />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/idID"
        android:text="@string/user_name"
        android:layout_marginBottom="5dp"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/catch_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/company"
        android:text="@string/catch_phrase"
        android:layout_marginBottom="5dp"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:text="@string/e_mail"
        android:layout_marginBottom="5dp"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:text="@string/city"
        android:layout_marginBottom="5dp"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/address"
        android:text="@string/phone_num"
        android:layout_marginBottom="5dp"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:text="@string/website"
        android:layout_marginBottom="5dp"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/website"
        android:text="@string/company_name"
        android:layout_marginBottom="5dp"
        android:textSize="15sp"/>

</RelativeLayout>
